--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -35,24 +35,23 @@
             </field>
         </record>
 
-    <record id="view_order_form2" model="ir.ui.view">
-            <field name="name">sale.order.form</field>
-            <field name="model">sale.order</field>
-            <field name="inherit_id" ref="sale.view_order_form"/>
+
+        <!-- Update existing form view or create a new one -->
+        <record id="view_order_line_form_inherit" model="ir.ui.view">
+            <field name="name">sale.order.line.form.inherit</field>
+            <field name="model">sale.order.line</field>
+            <field name="inherit_id" ref="sale.view_order_line_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
-
-
-                    <field name="product_uom" position="attributes">
+                <field name="product_uom" position="attributes">
                     <attribute name="domain">[('id', 'in', available_uoms[0][2])]</attribute>
                 </field>
                 <field name="price_unit" position="attributes">
                     <attribute name="readonly">1</attribute>
                 </field>
-
-                </xpath>
             </field>
         </record>
+   
+
 
 
 
