--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -35,17 +35,17 @@
             </field>
         </record>
 
-     <record id="view_order_line_form_inherit" model="ir.ui.view">
-            <field name="name">sale.order.line.form.inherit</field>
-            <field name="model">sale.order.line</field>
-            <field name="inherit_id" ref="sale.view_order_line_form"/>
+   <record id="view_order_form2" model="ir.ui.view">
+            <field name="name">sale.order.form.inherit</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-                <field name="product_uom" position="attributes">
-                    <attribute name="domain">[('id', 'in', available_uoms.ids)]</attribute>
-                </field>
-                <field name="price_unit" position="attributes">
+                <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
+                    <field name="product_uom" domain="[('id', 'in', available_uoms.ids)]"/>
+                </xpath>
+                <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
                     <attribute name="readonly">1</attribute>
-                </field>
+                </xpath>
             </field>
         </record>
 
