--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -35,6 +35,23 @@
             </field>
         </record>
 
+    <record id="view_order_form2" model="ir.ui.view">
+            <field name="name">sale.order.form</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
+                    <field name="selected_uom_ids" invisible="1"/>
+                    <field name="sales_multi_uom_id" readonly="state in ('sale','done', 'cancel')"/>
+                </xpath>
+                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
+                    <field name="selected_uom_ids" invisible="1"/>
+
+                    <field name="sales_multi_uom_id" readonly="state in ('sale','done', 'cancel')"/>
+                </xpath>
+            </field>
+        </record>
+
 
 
 </odoo>
