--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -52,6 +52,30 @@
             </field>
         </record>
 
+     <record id="view_purchase_order_form_custom" model="ir.ui.view">
+            <field name="name">purchase.order.form.custom</field>
+            <field name="model">purchase.order</field>
+            <field name="inherit_id" ref="purchase.purchase_order_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
+                    <field name="selected_uom_ids" invisible="1"/>
+                    <field name="purchase_multi_uom_id" readonly="state in ('purchase', 'done', 'cancel')"/>
+                </xpath>
+            </field>
+        </record>
+
+        <!-- Extend the purchase order line tree view -->
+        <record id="view_purchase_order_line_tree_custom" model="ir.ui.view">
+            <field name="name">purchase.order.line.tree.custom</field>
+            <field name="model">purchase.order.line</field>
+            <field name="inherit_id" ref="purchase.purchase_order_line_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='product_qty']" position="after">
+                    <field name="selected_uom_ids" invisible="1"/>
+                    <field name="purchase_multi_uom_id" readonly="state in ('purchase', 'done', 'cancel')"/>
+                </xpath>
+            </field>
+        </record>
 
 
 </odoo>
