--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -60,7 +60,7 @@
                 <xpath expr="//field[@name='order_line']/tree//field[@name='product_qty']" position="after">
                 <field name="selected_uom_ids" invisible="1"/>
 
-                    <field name="sales_multi_uom_id" readonly="state in ('sale','done', 'cancel')"/>
+                    <field name="purchase_multi_uom_id" readonly="state in ('sale','done', 'cancel')"/>
             </xpath>
             </field>
         </record>
