--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -60,8 +60,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='order_line']/tree//field[@name='product_qty']" position="after">
                 <field name="selected_uom_ids" invisible="1"/>
-
-                    <field name="purchase_multi_uom_id" />
+                    <field name="purchase_multi_uom_id" widget="many2one"/>
+                      <field name="price_unit" readonly="1"/>
                      <field name="purchase_multi_uom_cost" />
             </xpath>
             </field>
